src/tests/TodoList/errors/TheListDoesNotExist.ts
import { CustomError } from '../../../lib'

export default CustomError<'TheListDoesNotExist'>({
  name: 'TheListDoesNotExist',
})
